old-demos/demos/microshift-disconnected/files/manifests/2048/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: app2048
  name: app2048
spec: {}
