old-demos/demos/microshift-disconnected/files/manifests/2048/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: app2048
spec:
  selector:
    app: app2048
  ports:
  - name: http
    protocol: TCP
    port: 8081
    targetPort: 8081
